--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
 
-        <div class="bucket img1 center done">운전면허 따기</div>
+        <div class="bucket img1 center">운전면허 따기</div>
         <div class="bucket img2 center">황혼 완곡하기</div>
         <div class="bucket img2 center">코딩 배워서 간단한 게임 만들어보기</div>
         <div class="bucket img1 center"></div>
